<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="info">User Information</string>
    <string name="userName">User Name</string>
    <string name="age">Age</string>
    <string name="job">Job</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save">Save</string>
    <string name="users">Users</string>
    <string name="years_old">Years Old</string>
    <string name="somethingWentWrong">Something went wrong.</string>
</resources>